--- a/back/docker/nginx/xm_back_nginx.conf
+++ b/back/docker/nginx/xm_back_nginx.conf
@@ -13,7 +13,7 @@ server {
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
 
-        fastcgi_param APP_ENV dev;
+        fastcgi_param APP_ENV prod;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param DOCUMENT_ROOT $realpath_root;
         internal;
